--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 sudo: required
-dist: trusty
+#dist: trusty
+dist: xenial
 
 before_script:
-  - bash -xve ./test/travis_ros_install.bash
+  - bash -xve ./test/travis_ros_install_xenial.bash
   - source ~/catkin_ws/devel/setup.bash
-  - bash -xve ./test/travis_package_make.bash
-  - source ~/catkin_ws/devel/setup.bash
-  - ./test/travis_prepare_dummy_files.bash
-  - export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages
+#  - bash -xve ./test/travis_package_make.bash
+#  - source ~/catkin_ws/devel/setup.bash
+#  - ./test/travis_prepare_dummy_files.bash
+#  - export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages
 
 script:
-  - rostest pimouse_vision_control test-left-face.launch
-  - rostest pimouse_vision_control test-right-face.launch
+#  - rostest pimouse_vision_control test-left-face.launch
+#  - rostest pimouse_vision_control test-right-face.launch
