--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ sudo: required
 #dist: trusty
 dist: xenial
 
-before_script:
-  - bash -xve ./test/travis_ros_install_xenial.bash
+#before_script:
+script:
+  - bash -xve ./test/travis_ros_install.bash
   - source ~/catkin_ws/devel/setup.bash
 #  - bash -xve ./test/travis_package_make.bash
 #  - source ~/catkin_ws/devel/setup.bash
 #  - ./test/travis_prepare_dummy_files.bash
 #  - export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages
 
-script:
+#script:
 #  - rostest pimouse_vision_control test-left-face.launch
 #  - rostest pimouse_vision_control test-right-face.launch
