--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ script:
   - source ~/catkin_ws/devel/setup.bash
   - bash -xve ./test/travis_package_make_xenial.bash
   - source ~/catkin_ws/devel/setup.bash
-#  - ./test/travis_prepare_dummy_files.bash
-#  - export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages
+  - ./test/travis_prepare_dummy_files.bash
+  - export PYTHONPATH=$PYTHONPATH:/usr/lib/python2.7/dist-packages
 
 #script:
 #  - rostest pimouse_vision_control test-left-face.launch
